# npa-web

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs  main.rs  package_fixture.rs  render.rs  routes.rs  state.rs  std_demo.rs  style.rs
templates/: goal.html  lsp.html  messages.html  package_fixture.html  page.html  source_form.html  verify.html  workspace.html
